<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".mvvm.newContact.NewContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:src="@mipmap/user_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/surname">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="12dp"
            android:text="@string/phone"
            android:textColor="@color/coloTextGrey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_phone_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:inputType="phone"
            android:maxLines="1" />

        <LinearLayout
            android:id="@+id/ll_phone_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_add_phone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:padding="6dp"
                android:text="@string/add_phone"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <Button
                android:id="@+id/bt_delete_phone"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorRed"
                android:padding="6dp"
                android:text="@string/delete_phone"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textColor="@color/coloTextGrey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_email_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <LinearLayout
            android:id="@+id/ll_email_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/bt_add_email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:padding="6dp"
                android:text="@string/add_email"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <Button
                android:id="@+id/bt_delete_email"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorRed"
                android:padding="6dp"
                android:text="@string/delete_email"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_create"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_user"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>